--- a/angularjsproject/src/less/main.less
+++ b/angularjsproject/src/less/main.less
@@ -114,10 +114,10 @@ h2 {
 
 /**
  * Now that all app-wide styles have been applied, we can load the styles for
- * all the submodules and components we are using. 
+ * all the submodules and components we are using.
  *
  * TODO: In a later version of this boilerplate, I'd like to automate this.
  */
 
-@import '../app/home/home.less';
+@import '../app/task-list/task-list.less';
 
