--- a/angularjsproject/src/app/task-list/task-list.tpl.html
+++ b/angularjsproject/src/app/task-list/task-list.tpl.html
@@ -1,6 +1,7 @@
 <h2>TODO List</h2>
 <div ng-controller="TaskListController as taskList">
 
+    <input type="checkbox" ng-model="taskList.allCompleted" ng-change="taskList.completeAll()">
     <input type="text" ng-model="taskList.newTask.text" ng-enter="taskList.addNewTaskToList()" placeholder="What needs to be done?"/>
 
     <div ng-repeat="task in taskList.tasks">
