add remove task function

--- a/angularjsproject/src/app/task-list/task-list.tpl.html
+++ b/angularjsproject/src/app/task-list/task-list.tpl.html
@@ -9,5 +9,6 @@
         <span ng-class="{'line-through': task.completed}">
             <span>{{task.text}}</span>
         </span>
+        <button ng-click="taskList.removeTask(task)"></button>
     </div>
 </div>
